feat: migrate configurations to fedora

--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -22,10 +22,12 @@ button {
     transition-timing-function: ease-in-out;
 
     border: 3px solid #1f1f28;
+    color: white;
     background-color: rgba(31, 31, 40, 0.2);
     box-shadow:
         0 4px 8px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-repeat: no-repeat;
 }
 
 button:focus,
